preparing for deployment

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "smartbrain",
+  "homepage": "https://salihzinaty.com/smartbrain",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
